# devin-remediation-orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  prompts.py  schemas.py  state.py  worker.py
app/routers/: analytics.py  metrics.py  runs.py  webhooks.py
app/services/: analytics_queries.py  classifier.py  devin_client.py  github_client.py  orchestrator.py  poller.py  reporter.py  sql_guard.py
app/static/: index.html
scripts/: init_db.sql  send_test_webhook.sh
seed/: create_issues.py  seed_issues.yaml
tests/: test_analytics_flow.py  test_classifier.py  test_orchestrator.py  test_sql_guard.py  test_state_machine.py  test_webhook_signature.py
